(executable
  (name hum_devel)
  (public_name hum_devel)
  (modules Hum_devel)
  (libraries humanitas.devel_ui))

(library
  (name humanitas_devel_ui)
  (public_name humanitas.devel_ui)
  (modules (:standard \ Hum_devel))
  (libraries humanitas.sdlext humanitas.game humanitas.tools humanitas.physis humanitas.orbis sdl.sdlttf))
